--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Slider Zero</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <div class="carousel-container">
+    <i class="fas fa-arrow-left" id="prevBtn"></i>
+    <i class="fas fa-arrow-right" id="nextBtn"></i>
+    <div class="carousel-slide">
+      <img src="./images/slider5.jpg"alt="Image 5"  id="lastClone" >
+      <img src="./images/slider1.jpg" alt="Image 1">
+      <img src="./images/slider2.jpg" alt="Image 2">
+      <img src="./images/slider3.jpg" alt="Image 3">
+      <img src="./images/slider4.jpg" alt="Image 4">
+      <img src="./images/slider5.jpg" alt="Image 5">
+      <img src="./images/slider1.jpg" alt="Image 1" id="firstClone" >
+    </div>
+  </div>
+
+
+  <script src="./js/app.js"></script>
 </body>
 </html>
